--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -2,8 +2,172 @@
 <html>
 <head>
 	<title>Friend Finder</title>
+	<!-- Latest compiled and minified CSS -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+	<!-- jQuery -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+	<!-- Latest compiled and minified JavaScript -->
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </head>
 <body>
-	<p>Testing</p>
+	<div class="container">
+		<form>
+
+			<h3><strong>About You</strong></h3>
+			<h4>Name (Required)</h4>
+			<input type="text" name="" id="name" class="form-control" required >
+
+			<h4>Link to Photo Image (Required)</h4>
+			<input type="text" name="" id="photo" class="form-control" required >
+
+			<div class="form-group">
+				<label>Q1</label>
+				<p>test</p>
+				<select class="form-control" id='1'>
+					<option>1</option>
+					<option>2</option>
+					<option>3</option>
+					<option>4</option>
+					<option>5</option>
+				</select>
+			</div>
+
+			<div class="form-group">
+				<label for="q2">Q2</label>
+				<p>test</p>
+				<select class="form-control" id='2'>
+					<option>1</option>
+					<option>2</option>
+					<option>3</option>
+					<option>4</option>
+					<option>5</option>
+				</select>
+			</div>
+
+			<div class="form-group">
+			<label for="q2">Q2</label>
+			<p>test</p>
+			<select class="form-control" id='3'>
+			<option>1</option>
+			<option>2</option>
+			<option>3</option>
+			<option>4</option>
+			<option>5</option>
+			</select>
+			</div>
+
+			<div class="form-group">
+			<label for="q2">Q2</label>
+			<p>test</p>
+			<select class="form-control" id='4'>
+			<option>1</option>
+			<option>2</option>
+			<option>3</option>
+			<option>4</option>
+			<option>5</option>
+			</select>
+			</div>
+
+			<div class="form-group">
+			<label for="q2">Q2</label>
+			<p>test</p>
+			<select class="form-control" id='5'>
+			<option>1</option>
+			<option>2</option>
+			<option>3</option>
+			<option>4</option>
+			<option>5</option>
+			</select>
+			</div>
+
+			<div class="form-group">
+			<label for="q2">Q2</label>
+			<p>test</p>
+			<select class="form-control" id='6'>
+			<option>1</option>
+			<option>2</option>
+			<option>3</option>
+			<option>4</option>
+			<option>5</option>
+			</select>
+			</div>
+
+			<div class="form-group">
+			<label for="q2">Q2</label>
+			<p>test</p>
+			<select class="form-control" id='7'>
+			<option>1</option>
+			<option>2</option>
+			<option>3</option>
+			<option>4</option>
+			<option>5</option>
+			</select>
+			</div>
+
+			<div class="form-group">
+			<label for="q2">Q2</label>
+			<p>test</p>
+			<select class="form-control" id='8'>
+			<option>1</option>
+			<option>2</option>
+			<option>3</option>
+			<option>4</option>
+			<option>5</option>
+			</select>
+			</div>
+
+			<div class="form-group">
+			<label for="q2">Q2</label>
+			<p>test</p>
+			<select class="form-control" id='9'>
+			<option>1</option>
+			<option>2</option>
+			<option>3</option>
+			<option>4</option>
+			<option>5</option>
+			</select>
+			</div>
+
+			<div class="form-group">
+			<label for="q2">Q2</label>
+			<p>test</p>
+			<select class="form-control" id='10'>
+			<option>1</option>
+			<option>2</option>
+			<option>3</option>
+			<option>4</option>
+			<option>5</option>
+			</select>
+			</div>
+
+		  <button type="submit" class="btn btn-default" id="form-submit">Submit</button>
+		</form>
+	</div>
+	<script type="text/javascript">
+		$("#form-submit").on('click', function(e) {
+			e.preventDefault();
+			var answers = [];
+
+			$(".form-group").each(function() {
+				answers.push($(this).find("select").val());
+			});
+
+			if($("#name").val() === ''){
+				alert('enter a name');
+			}else {
+				var newFriend = {
+					name: $("#name").val().trim(),
+					photo: $("#photo").val().trim(),
+					scores: answers
+				}
+			}
+
+			$.post('/api/friends', newFriend)
+			.done(function(data) {
+				console.log(data);
+			});
+
+		});
+	</script>
 </body>
 </html>
