--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -24,11 +24,11 @@
 				<label>Q1</label>
 				<p>test</p>
 				<select class="form-control" id='1'>
-					<option>1</option>
-					<option>2</option>
-					<option>3</option>
-					<option>4</option>
-					<option>5</option>
+					<option value="1">1</option>
+					<option value="2">2</option>
+					<option value="3">3</option>
+					<option value="4">4</option>
+					<option value="5">5</option>
 				</select>
 			</div>
 
@@ -36,108 +36,108 @@
 				<label for="q2">Q2</label>
 				<p>test</p>
 				<select class="form-control" id='2'>
-					<option>1</option>
-					<option>2</option>
-					<option>3</option>
-					<option>4</option>
-					<option>5</option>
+					<option value="1">1</option>
+					<option value="2">2</option>
+					<option value="3">3</option>
+					<option value="4">4</option>
+					<option value="5">5</option>
 				</select>
 			</div>
 
 			<div class="form-group">
-			<label for="q2">Q2</label>
-			<p>test</p>
-			<select class="form-control" id='3'>
-			<option>1</option>
-			<option>2</option>
-			<option>3</option>
-			<option>4</option>
-			<option>5</option>
-			</select>
+				<label for="q2">Q2</label>
+				<p>test</p>
+				<select class="form-control" id='3'>
+					<option value="1">1</option>
+					<option value="2">2</option>
+					<option value="3">3</option>
+					<option value="4">4</option>
+					<option value="5">5</option>
+				</select>
 			</div>
 
 			<div class="form-group">
-			<label for="q2">Q2</label>
-			<p>test</p>
-			<select class="form-control" id='4'>
-			<option>1</option>
-			<option>2</option>
-			<option>3</option>
-			<option>4</option>
-			<option>5</option>
-			</select>
+				<label for="q2">Q2</label>
+				<p>test</p>
+				<select class="form-control" id='4'>
+					<option value="1">1</option>
+					<option value="2">2</option>
+					<option value="3">3</option>
+					<option value="4">4</option>
+					<option value="5">5</option>
+				</select>
 			</div>
 
 			<div class="form-group">
-			<label for="q2">Q2</label>
-			<p>test</p>
-			<select class="form-control" id='5'>
-			<option>1</option>
-			<option>2</option>
-			<option>3</option>
-			<option>4</option>
-			<option>5</option>
-			</select>
+				<label for="q2">Q2</label>
+				<p>test</p>
+				<select class="form-control" id='5'>
+					<option value="1">1</option>
+					<option value="2">2</option>
+					<option value="3">3</option>
+					<option value="4">4</option>
+					<option value="5">5</option>
+				</select>
 			</div>
 
 			<div class="form-group">
-			<label for="q2">Q2</label>
-			<p>test</p>
-			<select class="form-control" id='6'>
-			<option>1</option>
-			<option>2</option>
-			<option>3</option>
-			<option>4</option>
-			<option>5</option>
-			</select>
+				<label for="q2">Q2</label>
+				<p>test</p>
+				<select class="form-control" id='6'>
+					<option value="1">1</option>
+					<option value="2">2</option>
+					<option value="3">3</option>
+					<option value="4">4</option>
+					<option value="5">5</option>
+				</select>
 			</div>
 
 			<div class="form-group">
-			<label for="q2">Q2</label>
-			<p>test</p>
-			<select class="form-control" id='7'>
-			<option>1</option>
-			<option>2</option>
-			<option>3</option>
-			<option>4</option>
-			<option>5</option>
-			</select>
+				<label for="q2">Q2</label>
+				<p>test</p>
+				<select class="form-control" id='7'>
+					<option value="1">1</option>
+					<option value="2">2</option>
+					<option value="3">3</option>
+					<option value="4">4</option>
+					<option value="5">5</option>
+				</select>
 			</div>
 
 			<div class="form-group">
-			<label for="q2">Q2</label>
-			<p>test</p>
-			<select class="form-control" id='8'>
-			<option>1</option>
-			<option>2</option>
-			<option>3</option>
-			<option>4</option>
-			<option>5</option>
-			</select>
+				<label for="q2">Q2</label>
+				<p>test</p>
+				<select class="form-control" id='8'>
+					<option value="1">1</option>
+					<option value="2">2</option>
+					<option value="3">3</option>
+					<option value="4">4</option>
+					<option value="5">5</option>
+				</select>
 			</div>
 
 			<div class="form-group">
-			<label for="q2">Q2</label>
-			<p>test</p>
-			<select class="form-control" id='9'>
-			<option>1</option>
-			<option>2</option>
-			<option>3</option>
-			<option>4</option>
-			<option>5</option>
-			</select>
+				<label for="q2">Q2</label>
+				<p>test</p>
+				<select class="form-control" id='9'>
+					<option value="1">1</option>
+					<option value="2">2</option>
+					<option value="3">3</option>
+					<option value="4">4</option>
+					<option value="5">5</option>
+				</select>
 			</div>
 
 			<div class="form-group">
-			<label for="q2">Q2</label>
-			<p>test</p>
-			<select class="form-control" id='10'>
-			<option>1</option>
-			<option>2</option>
-			<option>3</option>
-			<option>4</option>
-			<option>5</option>
-			</select>
+				<label for="q2">Q2</label>
+				<p>test</p>
+				<select class="form-control" id='10'>
+					<option value="1">1</option>
+					<option value="2">2</option>
+					<option value="3">3</option>
+					<option value="4">4</option>
+					<option value="5">5</option>
+				</select>
 			</div>
 
 		  <button type="submit" class="btn btn-default" id="form-submit">Submit</button>
@@ -150,10 +150,11 @@
 
 			$(".form-group").each(function() {
 				answers.push($(this).find("select").val());
+				// console.log(parseInt($(this).find("select").val()));
 			});
 
-			if($("#name").val() === ''){
-				alert('enter a name');
+			if($("#name").val() === '' || $("#photo").val() === ''){
+				alert('Please enter all required info');
 			}else {
 				var newFriend = {
 					name: $("#name").val().trim(),
