--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -142,6 +142,29 @@
 
 		  <button type="submit" class="btn btn-default" id="form-submit">Submit</button>
 		</form>
+
+		<!-- Modal -->
+		<div id="resultsModal" class="modal fade" role="dialog">
+		  <div class="modal-dialog">
+
+		    <!-- Modal content-->
+		    <div class="modal-content">
+		      <div class="modal-header">
+		        <button type="button" class="close" data-dismiss="modal">&times;</button>
+		        <h2 class="modal-title"><strong>Your New Best Friend</strong></h2>
+		      </div>
+		      <div class="modal-body" id="modal-insert">
+				<h2 id="matchName"></h2>
+	        	<img id="matchImg" src="#" class="img-responsive" alt="friend image">
+		      </div>
+		      <div class="modal-footer">
+		        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+		      </div>
+		    </div>
+
+		  </div>
+		</div>
+
 	</div>
 	<script type="text/javascript">
 		$("#form-submit").on('click', function(e) {
@@ -150,7 +173,6 @@
 
 			$(".form-group").each(function() {
 				answers.push($(this).find("select").val());
-				// console.log(parseInt($(this).find("select").val()));
 			});
 
 			if($("#name").val() === '' || $("#photo").val() === ''){
@@ -166,6 +188,12 @@
 			$.post('/api/friends', newFriend)
 			.done(function(data) {
 				console.log(data);
+
+				$("#matchName").text(data.name);
+				$("#matchImg").attr('src', data.photo);
+
+				$("#resultsModal").modal("toggle");
+
 			});
 
 		});
