--- a/app/public/home.html
+++ b/app/public/home.html
@@ -11,7 +11,16 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </head>
 <body>
-	<a href="/survey">Survey</a>
+	<div class="container">
+		<div class="row">
+			<div class="col-sm-6 col-sm-offset-3 col-md-6 col-md-offset-3">
+				<div class="jumbotron">
+					<h1>Friend Finder</h1>
+					<button type="button" class="btn btn-default btn-lg"><a href="/survey">Survey</a></button>
+				</div>
+			</div>
+		</div>
+	</div>
 </body>
 	
 </html>
