--- a/app/public/home.html
+++ b/app/public/home.html
@@ -15,9 +15,11 @@
 		<div class="row">
 			<div class="col-sm-6 col-sm-offset-3 col-md-6 col-md-offset-3">
 				<div class="jumbotron">
-					<h1>Friend Finder</h1>
+					<h1>Friend.ly</h1>
+					<h2>Let's get to know each other</h2>
 					<button type="button" class="btn btn-default btn-lg"><a href="/survey">Survey</a></button>
 				</div>
+				<a href="/api/friends">API</a> | <a href="https://github.com/mattwhite8/friend_finder">GitHub Repo</a>
 			</div>
 		</div>
 	</div>
